--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<link href="./_app/immutable/assets/0.ClpOQqX2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.IeLBjOpO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B09PuNPv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BI43EWmv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B_HhnCqQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ck1azPDW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DW_IFYLx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DCiv5Joy.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BzMnfALP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DV2wvDnG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CL9YzLuf.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ZC1pgTot.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.6RuxFRmk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.CO7tR1oS.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BaNjNR8I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/new_cards.hHHURS6e.js">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_15d9yon = {
+					__sveltekit_3qn7gz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/spiredle"
 					};
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B09PuNPv.js"),
-						import("./_app/immutable/entry/app.BzMnfALP.js")
+						import("./_app/immutable/entry/start.B_HhnCqQ.js"),
+						import("./_app/immutable/entry/app.DV2wvDnG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
