--- a/mobile/index.html
+++ b/mobile/index.html
@@ -8,11 +8,11 @@
 		<link href="../_app/immutable/assets/0.ClpOQqX2.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.IeLBjOpO.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DeZTvMwu.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DXQckidz.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DzeTiOYO.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.6m7k-oAB.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.DW_IFYLx.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DCiv5Joy.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.C0fwHRCq.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.VtfFOOaI.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CL9YzLuf.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.6RuxFRmk.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.CO7tR1oS.js">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f84u64 = {
+					__sveltekit_1pqmzwe = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/spiredle"
 					};
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DeZTvMwu.js"),
-						import("../_app/immutable/entry/app.C0fwHRCq.js")
+						import("../_app/immutable/entry/start.DzeTiOYO.js"),
+						import("../_app/immutable/entry/app.VtfFOOaI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
