--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 		
 		<link href="./_app/immutable/assets/0.B-alupPN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/ProgressBar.Cirlo5Z8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C-ilE8Rd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D6aKoHex.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BZZ-8EV3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DWJvWipV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8JmcwMnH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DnDaRlKh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CusLhhNn.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CvQY-wTL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.BwAGHu47.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DgfTXX5o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B5P41i1h.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYTFM_bZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.zPAKXpSu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.POPgNpDh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BTNeIvVg.js"><title>Spiredle</title><!-- HEAD_svelte-w4p0fi_START --><!-- HEAD_svelte-w4p0fi_END --><!-- HEAD_svelte-w4p0fi_START --><!-- HEAD_svelte-w4p0fi_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ZZGkzJKr.js"><title>Spiredle</title><!-- HEAD_svelte-w4p0fi_START --><!-- HEAD_svelte-w4p0fi_END --><!-- HEAD_svelte-w4p0fi_START --><!-- HEAD_svelte-w4p0fi_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="crimson">
-		<div style="display: contents">   <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"><div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><div slot="lead" class="flex gap-4" data-svelte-h="svelte-vqqie7"><a href="./">Spiredle</a> <a href="./daily">Daily</a> <a href="./infinite">Infinite</a></div></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div slot="trail" data-svelte-h="svelte-yca2kl"><a href="https://www.youtube.com/@menddev">menddev</a></div></div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto ">     <div class="grid grid-cols-4 p-8 gap-8" data-svelte-h="svelte-wuu1w9"><a class="text-3xl font-bold card card-hover bg-gradient-to-br variant-gradient-primary-secondary flex justify-center items-center aspect-square" href="./daily">Daily</a> <a class="text-3xl font-bold card card-hover bg-gradient-to-br variant-gradient-secondary-tertiary flex justify-center items-center aspect-square" href="./daily">Infinite</a> <a class="text-3xl text-white font-bold card card-hover bg-gradient-to-br variant-gradient-tertiary-primary flex justify-center items-center aspect-square" href="./">W.I.P.</a></div>   </main>  </div>  </div>  </div> 
+		<div style="display: contents">   <div id="appShell" class="w-full h-full flex flex-col overflow-hidden " data-testid="app-shell"> <header id="shell-header" class="flex-none z-10"><div class="app-bar flex flex-col bg-surface-100-800-token  space-y-4 p-4  " data-testid="app-bar" role="toolbar" aria-label="" aria-labelledby=""> <div class="app-bar-row-main grid items-center grid-cols-[auto_1fr_auto] gap-4 "> <div class="app-bar-slot-lead flex-none flex justify-between items-center "><div slot="lead" class="flex gap-4" data-svelte-h="svelte-vqqie7"><a href="./">Spiredle</a> <a href="./daily">Daily</a> <a href="./infinite">Infinite</a></div></div>  <div class="app-bar-slot-default flex-auto "></div>  <div class="app-bar-slot-trail flex-none flex items-center space-x-4 "><div slot="trail" data-svelte-h="svelte-yca2kl"><a href="https://www.youtube.com/@menddev">menddev</a></div></div></div>  </div> </header>  <div class="flex-auto w-full h-full flex overflow-hidden">   <div id="page" class=" flex-1 overflow-x-hidden flex flex-col" style="scrollbar-gutter: auto;">   <main id="page-content" class="flex-auto ">     <div class="grid grid-cols-4 p-8 gap-8" data-svelte-h="svelte-1mvarto"><a class="text-3xl font-bold card card-hover bg-gradient-to-br variant-gradient-primary-secondary flex justify-center items-center aspect-square" href="./daily">Daily</a> <a class="text-3xl font-bold card card-hover bg-gradient-to-br variant-gradient-secondary-tertiary flex justify-center items-center aspect-square" href="./infinite">Infinite</a> <a class="text-3xl text-white font-bold card card-hover bg-gradient-to-br variant-gradient-tertiary-primary flex justify-center items-center aspect-square" href="./">W.I.P.</a></div>   </main>  </div>  </div>  </div> 
 			
 			<script>
 				{
-					__sveltekit_cm8usc = {
+					__sveltekit_1p98iae = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/spiredle"
 					};
@@ -33,8 +33,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C-ilE8Rd.js"),
-						import("./_app/immutable/entry/app.CvQY-wTL.js")
+						import("./_app/immutable/entry/start.BZZ-8EV3.js"),
+						import("./_app/immutable/entry/app.DgfTXX5o.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
